--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+setuptools>=65.5.0
+wheel>=0.38.0
+pip>=22.0.0
 Flask==2.3.3
 Flask-CORS==4.0.0
 pandas==2.0.3
-numpy==1.24.3
-tensorflow==2.13.0
+numpy<1.24.0  # Specific version for Python 3.13 compatibility
+tensorflow-cpu==2.13.0  # Using CPU version for better compatibility
 scikit-learn==1.3.0
 joblib==1.3.2
 openpyxl==3.1.2
