--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
-setuptools>=65.5.0
-wheel>=0.38.0
-pip>=22.0.0
-Flask==2.3.3
+# Core dependencies
+setuptools==65.5.0
+wheel==0.38.0
+pip==22.0.0
+
+# Web framework
+Flask==2.2.5
 Flask-CORS==4.0.0
-pandas==2.0.3
-numpy<1.24.0  # Specific version for Python 3.13 compatibility
-tensorflow-cpu==2.13.0  # Using CPU version for better compatibility
-scikit-learn==1.3.0
-joblib==1.3.2
-openpyxl==3.1.2
+Werkzeug==2.2.3
+
+# Data processing
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.2.2
+joblib==1.2.0
+openpyxl==3.0.10
 xlrd==2.0.1
+
+# Machine Learning
+tensorflow-cpu==2.11.0
